fixed cards while on tablet view

--- a/index.css
+++ b/index.css
@@ -325,18 +325,15 @@ p {
   gap: 15px;
 }
 
-
-
-@media (min-width: 400px) {
-  .services-cards {
+.services-cards {
     display: flex;
     flex-direction: column;
     padding: 0 2rem;
     gap: 50px;
   }
-}
 
-@media (min-width: 900px) {
+
+@media (min-width: 850px) {
   .services-cards{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
